Rename Transaction to TransactionEntity and User to UserEntity